- Enable CORS for provided backend APIs - Change method of sending username and password during login, from query parameters to json content in request body
